<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="signUpViewModel"
            type="com.android.example.drawhubmobile.viewmodels.auth.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".uicontrollers.auth.SignUpFragment">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark">

                <ImageView
                    android:id="@+id/logoImage"
                    android:layout_width="300sp"
                    android:layout_height="300sp"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:contentDescription="@string/logoImageDescription"
                    app:layout_constraintBottom_toTopOf="@+id/linearInputLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_drawhub_logo" />

                <LinearLayout
                    android:id="@+id/linearInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_large"
                    android:layout_marginEnd="@dimen/margin_large"
                    android:layout_marginBottom="@dimen/margin_large"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/logoImage">

                    <!-- FIRST NAME -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/firstNameLayout"
                        style="@style/FormEditTextLayout"
                        android:layout_marginBottom="@dimen/margin_small"
                        android:hint="@string/firstNameLabel">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/firstNameText"
                            style="@style/FormEditText"
                            android:maxLength="@integer/max_auth_input_characters"
                            android:text="@={signUpViewModel.firstName}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- LAST NAME -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/lastNameLayout"
                        style="@style/FormEditTextLayout"
                        android:layout_marginBottom="@dimen/margin_small"
                        android:hint="@string/lastNameLabel">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/lastNameText"
                            style="@style/FormEditText"
                            android:maxLength="@integer/max_auth_input_characters"
                            android:text="@={signUpViewModel.lastName}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- USERNAME -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/usernameLayout"
                        style="@style/FormEditTextLayout"
                        android:layout_marginBottom="@dimen/margin_small"
                        android:hint="@string/usernameLabel">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/usernameText"
                            style="@style/FormEditText"
                            android:maxLength="@integer/max_auth_input_characters"
                            android:text="@={signUpViewModel.username}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- EMAIL -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailLayout"
                        style="@style/FormEditTextLayout"
                        android:layout_marginBottom="@dimen/margin_small"
                        android:hint="@string/emailLabel">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/emailText"
                            style="@style/FormEditText"
                            android:inputType="textEmailAddress"
                            android:text="@={signUpViewModel.email}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- PASSWORD -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordLayout"
                        style="@style/FormEditTextLayout"
                        android:layout_marginBottom="@dimen/margin_small"
                        android:hint="@string/passwordLabel"
                        app:endIconMode="password_toggle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordText"
                            style="@style/FormEditText"
                            android:imeOptions="actionSend"
                            android:inputType="textPassword"
                            android:maxLength="@integer/max_auth_input_characters"
                            android:text="@={signUpViewModel.password}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- AVATAR -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/avatar" />

                    <GridLayout
                        android:id="@+id/avatarSelect"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@color/colorPrimaryDark" />

                    <!-- SIGN UP BUTTON-->
                    <Button
                        android:id="@+id/signUpButton"
                        style="@style/ActionButton.Login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_large"
                        android:text="@string/signUpBtnLabel" />
                </LinearLayout>

                <TextView
                    android:id="@+id/requiredLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/fieldsRequiredLabel"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearInputLayout" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <!-- BACK BUTTON-->
        <Button
            android:id="@+id/backButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:padding="@dimen/margin_small"
            android:text="@string/backBtnLabel"
            app:icon="@drawable/ic_keyboard_arrow_left_24px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>