...
    <string name="backBtnLabel">Go Back</string>
    <string name="fieldsRequiredLabel">All fields are required.</string>
    <string name="invalidLoginErrorLabel">The username or password is incorrect.</string>
    <string name="chatTypeMessageLabel">Type a message here…</string>
    <string name="logout">Logout</string>
    <string name="logout_description">Sign out of your account</string>
    <string name="requiredError">This field is required</string>
    <string name="minLengthError">%s must contain at least %d characters</string>
    <string name="usernameSpecialCharactersError">Username cannot contain spaces or special characters (@, !, -, _, etc)</string>
    <string name="invalidEmailError">Please enter a valid email</string>
    <string name="userCreatedToast">The user has been created!</string>
    <string name="usernameTakenError">This username is taken</string>
    <string name="emailTakenError">This email address is already used by another account</string>
    <string name="workInProgressMessage">Feature will be implemented soon!</string>
    <string name="alreadyLoggedInErrorLabel">This user is already logged in</string>
    <string name="avatarImageContentDescription">avatar</string>
    <string name="onJoinChatServerMessage">You have joined the chat</string>
    <string name="bottomNavBarAchievements">Achievements</string>
    <string name="bottomNavBarLeaderboard">Leaderboard</string>
...
    <string name="strokeWidthLabel">Stroke Width</string>
    <string name="chatHistoryLabel">Chat History</string>
    <string name="deleteRoomTitle">Delete Room?</string>
    <string name="leaveRoomTitle">Leave Room?</string>
    <string name="exitAppTitle">Exit the App?</string>
    <string name="exitAppMessage">Are you sure you want to exit?</string>
    <string name="passwordEmojiError">Password cannot contain emojis</string>
    <string name="notConnected">You are not connected. Please try again.</string>
    <string name="leaveGameTitle">Leave the Game?</string>
    <string name="leaveGameMessage">Are you sure you want to leave the game?</string>
    <string name="guess">Guess</string>
    <string name="chat">Chat</string>
    <string name="game_mode">Game Mode</string>
    <string name="difficulty">Difficulty</string>
...
